# volu

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg
backend/: pyproject.toml  requirements.txt
backend/blog/: admin.py  factories.py  feeds.py  forms.py  models.py  urls.py  views.py
backend/blog/migrations/: 0001_initial.py  0002_comment.py  0003_auto_20210325_1840.py  0004_post_tags.py
backend/blog/templatetags/: blog_tags.py
backend/main/: gunicorn.conf.py  settings.py  urls.py
backend/main/tests/: test_gunicorn.py
backend/orders/: urls.py  views.py
backend/pages/: forms.py  urls.py  views.py
backend/pages/tests/: test_forms.py  test_views.py
backend/places/: admin.py  apps.py  factories.py  feeds.py  forms.py  models.py  signals.py  sitemaps.py  urls.py  utils.py  views.py
backend/places/migrations/: 0001_initial.py  0002_auto_20210327_1854.py  0002_place_tags.py  0003_place_slug.py  0003_placeimage.py  0004_auto_20210326_1925.py  0004_auto_20211204_0603.py  0005_alter_uuidtaggeditem_content_type_and_more.py  0006_alter_place_options.py  0007_place_cover_place_thumbnail.py
backend/places/templatetags/: place_tags.py
backend/places/tests/: test_signals.py  test_views.py
backend/staticfiles/draw/: Untitled Diagram.drawio
backend/subscriptions/: admin.py  models.py  urls.py  views.py
backend/templates/: 404.html  500.html  _base.html
backend/users/: admin.py  factories.py  forms.py  views.py
blog/: admin.py  (+3 more)
(+97 files in other folders)
