[tool.poetry]
name = "volu"
version = "0.1.0"
description = "Online volunteering community"
authors = ["Gurupratap Matharu <gurupratap.matharu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
coverage = "^6.5.0"
django-allauth = "^0.51.0"
django-countries = "^7.4.2"
django-crispy-forms = "^1.14.0"
django-extensions = "^3.2.1"
django-rosetta = "^0.9.8"
django-storages = "^1.13.1"
django-taggit = "^3.1.0"
factory-boy = "^3.2.1"
gunicorn = "^20.1.0"
pillow = "^9.3.0"
sentry-sdk = "^1.11.0"
stripe = "^5.0.0"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
bandit = "^1.7.4"
safety = "^2.3.1"
flake8 = "^5.0.4"
ptvsd = "^4.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
